--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,11 @@
         "mydumps(hrs)"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.analysis.extraPaths": [
+        "/home/codespace/.vscode-remote/extensions/continue.continue-0.1.3"
+    ],
+    "python.autoComplete.extraPaths": [
+        "/home/codespace/.vscode-remote/extensions/continue.continue-0.1.3"
+    ]
 }
