Refactor factorial function and update main function
- Modify the factorial function to handle larger numbers
- Update the main function to use a larger number for testing

Closes #123

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "HalfAdder",
+            "request": "launch",
+            "mainClass": "HalfAdder",
+            "projectName": "Codesapce_da056e35"
+        },
+        {
+            "type": "java",
             "name": "AudioClient",
             "request": "launch",
             "mainClass": "AudioClient",
