--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,20 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "type": "java",
+            "name": "AudioServer",
+            "request": "launch",
+            "mainClass": "AudioServer",
+            "projectName": "Codesapce_da056e35"
+        },
+        {
+            "type": "java",
+            "name": "AudioClient",
+            "request": "launch",
+            "mainClass": "AudioClient",
+            "projectName": "Codesapce_da056e35"
+        }
+    ]
 }
